footer link alignment fix

--- a/wp-content/themes/framework-theme/assets/css/tailwind.css
+++ b/wp-content/themes/framework-theme/assets/css/tailwind.css
@@ -79,7 +79,7 @@ Author: Aadil Popat
 	}
 
 	.button-2 a {
-		@apply text-heading-m md:text-button-2 block w-fit;
+		@apply text-heading-m md:text-button-2 inline-block w-fit;
 
 		&:after {
 			content: '';
@@ -92,7 +92,7 @@ Author: Aadil Popat
 	}
 
 	.footer-link a{
-		@apply text-green-100 text-copy md:text-button-2 ;
+		@apply text-green-100 text-copy md:text-button-2 inline-block w-fit;
 
 		&:after {
 			content: '';
